# sphincs-plus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  wots.ipynb
data/: 128F-SLH-DSA-32768.csv  128S-SLH-DSA-32768.csv  128f-sign-32768.csv  192F-SLH-DSA-32768.csv  192S-SLH-DSA-32768.csv  kaypair-32768.csv  parameter.csv  performance.csv  verify-32768.csv
note/: FORS.ipynb  Hypertree.ipynb  SPX.md  cuda.md  mind.md  sha256.md  wots.ipynb
python/spx/: constant.py  sign.py  utils.py
python/tests/: test_address.py  test_utils.py
ref_implement/: readme.md
ref_implement/sphincs-sha256-128f-simple/: CMakeLists.txt  wots.c
ref_implement/sphincs-sha256-128f-simple/test/: benchmark.c  wots.c
spx/: address.py  constant.py  fors.py  utils.py  wots.py
src/: CMakeLists.txt  Makefile  api.h  gpu_sha256.cu  params.h  sha256.h  sign.cu  utils.cu  utils.h
src/test/: sha256.cu
test/: CMakeLists.txt  FLP.cu  ap_benchmark.cu  ap_spx.cu  ata.cu  dp_benchmark.cu  dp_spx.cu  sha256.cu  throughput.cu
tests/: readme.md  test_address.py  test_fors.py  test_utils.py  test_wots.py
utils/: __init__.py  adaptive-thread.ipynb  adaptive_thread_calculator.py  commit_message_generator.py  plot_thread_efficiency.py
